@@ -1,19 +1,49 @@
 package fr.janalyse.ssh
 
 import java.io._
-import com.jcraft.jsch.{ChannelShell}
+import com.jcraft.jsch.{ ChannelShell }
 import java.util.concurrent.ArrayBlockingQueue
 
-
 class SSHShell(implicit ssh: SSH) extends ShellOperations {
-  private def createReadyMessage = "ready-" + System.currentTimeMillis() 
-  val defaultPrompt = """_T-:+"""
-  val customPromptGiven = ssh.options.prompt.isDefined
+
+  override def execute(cmd: SSHCommand): String = {
+    synchronized {
+      sendCommand(cmd.cmd)
+      fromServer.getResponse()
+    }
+  }
+
+  override def executeWithStatus(cmd: SSHCommand): Tuple2[String, Int] = {
+    synchronized {
+      val result = execute(cmd)
+      val rc = executeAndTrim("echo $?").toInt
+      (result, rc)
+    }
+  }
+
+  def become(someoneelse: String, password: Option[String] = None): Boolean = {
+    synchronized {
+      execute("LANG=en; export LANG")
+      sendCommand(s"su - ${someoneelse}")
+      Thread.sleep(2000)
+      try {
+        if (options.username != "root")
+          password.foreach { it => toServer.send(it) }
+      } finally {
+        shellInit()
+      }
+      whoami == someoneelse
+    }
+  }
+
+  private def createReadyMessage = "ready-" + System.currentTimeMillis()
+  private val defaultPrompt = """_T-:+"""
+  private val customPromptGiven = ssh.options.prompt.isDefined
   val prompt = ssh.options.prompt getOrElse defaultPrompt
 
   val options = ssh.options
 
-  val (channel, toServer, fromServer) = {
+  private val (channel, toServer, fromServer) = {
     var ch: ChannelShell = ssh.jschsession.openChannel("shell").asInstanceOf[ChannelShell]
     ch.setPtyType("dumb")
     ch.setXForwarding(false)
@@ -38,79 +68,54 @@ class SSHShell(implicit ssh: SSH) extends ShellOperations {
     channel.disconnect()
   }
 
-  def become(someoneelse:String, password:Option[String]=None):Boolean = {
-    execute("LANG=en; export LANG")
-    sendCommand(s"su - ${someoneelse}")
-    Thread.sleep(2000)
-    try {
-      if (options.username != "root")
-        password.foreach {it => toServer.send(it) }
-    } finally {
-      shellInit()
-    }
-    whoami == someoneelse
-  }
-  
-  override def execute(cmd: SSHCommand): String = {
-    sendCommand(cmd.cmd)
-    fromServer.getResponse()
-  }
-
-
-  override def executeWithStatus(cmd: SSHCommand): Tuple2[String,Int] = {
-    val result = execute(cmd)
-    val rc = executeAndTrim("echo $?").toInt
-    (result, rc)
-  }
-
   private def shellInit() = {
-      if (ssh.options.prompt.isEmpty) {
-        // if no prompt is given we assume that a standard sh/bash/ksh shell is used
-        val readyMessage = createReadyMessage
-        fromServer.setReadyMessage(readyMessage)
-        toServer.send("unset LS_COLORS")
-        toServer.send("unset EDITOR")
-        toServer.send("unset PAGER")
-        toServer.send("COLUMNS=500")
-        toServer.send("PS1='%s'".format(defaultPrompt))
-        toServer.send("history -d $((HISTCMD-2)) && history -d $((HISTCMD-1))") // Previous command must be hidden
-        //toServer.sendCommand("set +o emacs")  // => Makes everything not working anymore, JSCH problem ?
-        //toServer.sendCommand("set +o vi") // => Makes everything not working anymore, JSCH problem ?
-        toServer.send("echo '%s'".format(readyMessage)) // ' are important to distinguish between the command and the result
-        fromServer.waitReady()
-        fromServer.getResponse() // ready response
-      } else {
-        fromServer.waitReady()
-        fromServer.getResponse() // For the initial prompt
-      }
+    if (ssh.options.prompt.isEmpty) {
+      // if no prompt is given we assume that a standard sh/bash/ksh shell is used
+      val readyMessage = createReadyMessage
+      fromServer.setReadyMessage(readyMessage)
+      toServer.send("unset LS_COLORS")
+      toServer.send("unset EDITOR")
+      toServer.send("unset PAGER")
+      toServer.send("COLUMNS=500")
+      toServer.send("PS1='%s'".format(defaultPrompt))
+      toServer.send("history -d $((HISTCMD-2)) && history -d $((HISTCMD-1))") // Previous command must be hidden
+      //toServer.sendCommand("set +o emacs")  // => Makes everything not working anymore, JSCH problem ?
+      //toServer.sendCommand("set +o vi") // => Makes everything not working anymore, JSCH problem ?
+      toServer.send("echo '%s'".format(readyMessage)) // ' are important to distinguish between the command and the result
+      fromServer.waitReady()
+      fromServer.getResponse() // ready response
+    } else {
+      fromServer.waitReady()
+      fromServer.getResponse() // For the initial prompt
+    }
   }
 
   private var doInit = true
   private def sendCommand(cmd: String): Unit = {
     if (doInit) {
       shellInit()
-      doInit = false    
+      doInit = false
     }
     toServer.send(cmd)
   }
   // -----------------------------------------------------------------------------------
   class Producer(output: OutputStream) {
-    private def sendChar(char:Int) {
+    private def sendChar(char: Int) {
       output.write(char)
       output.flush()
     }
-    private def sendString(cmd:String) {
+    private def sendString(cmd: String) {
       output.write(cmd.getBytes)
       nl()
       output.flush()
     }
-    def send(cmd: String) {sendString(cmd)}
-    
-    def break()  {sendChar(3)}  // Ctrl-C
-    def exit()   {sendChar(4)}  // Ctrl-D
-    def excape() {sendChar(27)} // ESC
-    def nl()     {sendChar(10)} // LF or NEWLINE or ENTER or Ctrl-J
-    def cr()     {sendChar(13)} // CR
+    def send(cmd: String) { sendString(cmd) }
+
+    def break() { sendChar(3) } // Ctrl-C
+    def exit() { sendChar(4) } // Ctrl-D
+    def excape() { sendChar(27) } // ESC
+    def nl() { sendChar(10) } // LF or NEWLINE or ENTER or Ctrl-J
+    def cr() { sendChar(13) } // CR
 
     def close() { output.close() }
   }
@@ -118,13 +123,13 @@ class SSHShell(implicit ssh: SSH) extends ShellOperations {
   // -----------------------------------------------------------------------------------
   class ConsumerOutputStream(checkReady: Boolean) extends OutputStream {
     import java.util.concurrent.TimeUnit
-    
+
     private val resultsQueue = new ArrayBlockingQueue[String](10)
 
     def hasResponse() = resultsQueue.size > 0
-    
+
     def getResponse(timeout: Long = ssh.options.timeout) = {
-      if (timeout==0L) resultsQueue.take()
+      if (timeout == 0L) resultsQueue.take()
       else {
         resultsQueue.poll(timeout, TimeUnit.MILLISECONDS) match {
           case null =>
@@ -140,10 +145,10 @@ class SSHShell(implicit ssh: SSH) extends ShellOperations {
       }
     }
 
-    def setReadyMessage(newReadyMessage:String) = {
+    def setReadyMessage(newReadyMessage: String) = {
       ready = checkReady
       readyMessage = newReadyMessage
-      readyMessageQuotePrefix="'"+newReadyMessage
+      readyMessageQuotePrefix = "'" + newReadyMessage
     }
     private var readyMessage = ""
     private var ready = checkReady
@@ -151,28 +156,28 @@ class SSHShell(implicit ssh: SSH) extends ShellOperations {
     def waitReady() {
       if (ready == false) readyQueue.take()
     }
-    private var readyMessageQuotePrefix="'"+readyMessage
-    private val promptEqualPrefix="="+prompt
+    private var readyMessageQuotePrefix = "'" + readyMessage
+    private val promptEqualPrefix = "=" + prompt
 
     private val consumerAppender = new StringBuilder(8192)
     private val promptSize = prompt.size
     private val lastPromptChars = prompt.reverse.take(2).reverse
     private var searchForPromptIndex = 0
-    
+
     def write(b: Int) {
       if (b != 13) { //CR removed... CR is always added by JSCH !!!!
-        val ch=b.toChar
+        val ch = b.toChar
         consumerAppender.append(ch) // TODO - Add charset support
         if (!ready) { // We want the response and only the response, not the echoed command, that's why the quote is prefixed
-          if ( consumerAppender.endsWith(readyMessage) && 
-              !consumerAppender.endsWith(readyMessageQuotePrefix)) {
+          if (consumerAppender.endsWith(readyMessage) &&
+            !consumerAppender.endsWith(readyMessageQuotePrefix)) {
             // wait for at least some results, will tell us that the ssh cnx is ready
             ready = true
             readyQueue.put("ready")
           }
         } else if (consumerAppender.endsWith(lastPromptChars)
-                   && consumerAppender.endsWith(prompt)
-                   && !consumerAppender.endsWith(promptEqualPrefix)) {
+          && consumerAppender.endsWith(prompt)
+          && !consumerAppender.endsWith(promptEqualPrefix)) {
           val promptIndex = consumerAppender.size - promptSize
           val firstNlIndex = consumerAppender.indexOf("\n")
           val result = consumerAppender.substring(firstNlIndex + 1, promptIndex)
